# fbgemm-ascend

./: .clang-format  .gitignore  CMakeLists.txt  FbgemmAscend.cmake  LICENSE  README.md  build_whl.sh  requirements.txt  setup.py
.gitcode/: PULL_REQUEST_TEMPLATE.md
bench/intraining_embedding_pruning/init_address_lookup_test/: test_init_address_lookup.py
bench/jagged/dense_to_jagged/: test_dense_to_jagged.py
bench/jagged/jagged_to_padded_dense_test/: test_comm_utils.py  test_jagged_1d_to_dense.py  test_jagged_2d_to_dense.py  test_jagged_to_padded_dense.py
bench/jagged/keyed_jagged_index_select_dim1/: test_keyed_jagged_index_select_dim1.py
bench/pooled_embedding/permute_pooled_embs/: common.py  permute_pooled_embedding_modules.py  permute_pooled_embedding_test.py  test_permute_pooled_embs.py
bench/quantize/float_or_half_to_fused_nbit_rowwise_test/: test_float_or_half_to_fused_nbit_rowwise.py
bench/sparse/asynchronous_complete_cumsum_test/: test_asynchronous_complete_cumsum.py
bench/sparse/block_bucketize_sparse_features_test/: block_bucketize_sparse_features_perf_cases.py  profile_block_bucketize_sparse_features_npu.py  test_block_bucketize_sparse_features_perf.py
bench/sparse/expand_into_jagged_permute/: test_expand_into_jagged_permute.py
bench/sparse/group_index_select_dim0/: test_group_index_select_dim0.py  test_group_index_select_dim0_forward_and_backward.py
bench/sparse/invert_permute/: test_invert_permute.py
bench/sparse/offsets_range/: special_test_offsets_range.py  test_offsets_range.py
bench/sparse/permute_sparse_data/: test_permute1d_sparse_data.py  test_permute2d_sparse_data.py  test_permute2d_sparse_data_input1d.py
bench/sparse/segment_sum_csr_test/: test_segment_sum_csr.py
bench/split_embeddings_cache/get_unique_indices_test/: test_get_unique_indices.py
bench/split_embeddings_cache/linearize_cache_indices_test/: test_linearize_cache_indices.py
bench/tbe_inference/int_nbit_split_embedding_codegen_lookup_function_test/: test_int_nbit_split_embedding_codegen_lookup_function.py
bench/tbe_inference/pruned_hashmap_lookup/: test_pruned_hashmap_lookup.py
bench/tbe_training/dense_embedding_codegen_lookup_function_test/: test_dense_embedding_codegen_lookup_function_auto.py  test_dense_embedding_codegen_lookup_function_backward.py  test_dense_embedding_codegen_lookup_function_forward.py  test_pta_grad_validation.py  test_pta_validation.py
bench/tbe_training/split_embedding_codegen_lookup_adagrad_function_test/: test_split_embedding_codegen_lookup_function.py  test_split_embedding_with_aggregation.py  test_split_embedding_with_aggregation_different_device.py
fbgemm_ascend/: __init__.py  env_setup.sh
fbgemm_ascend/bak/permute/: permute_pooled_embedding_test.py
fbgemm_ascend/test/jagged/: dense_to_jagged_test.py  jagged_to_padded_dense_test.py
fbgemm_ascend/test/sparse/: permute_indices_test.py
include/fbgemm_ascend/: jagged_tensor_ops.h  pooled_embedding_ops.h  sparse_ops.h  split_embeddings_cache_ops.h
src/cmake/: func.cmake
src/common/: common_utils.h  pytorch_npu_const.h  pytorch_npu_helper.hpp
src/common_ops/: common_host.h  kernel_common_utils.h  log_base.h  matmul_check.h  ops_log.h  workload_sharder.h
src/config/: transform.json
src/custom_op_template/: CMakeLists.txt  CMakePresets.json  README.MD  build.sh
src/custom_op_template/op_host/: CMakeLists.txt
src/custom_op_template/op_kernel/: CMakeLists.txt
src/group_index_select/group_index_select_dim0/: group_index_select_dim0.cpp
src/intraining_embedding_pruning_ops/init_address_lookup/: init_address_lookup.cpp
src/jagged_tensor_ops/dense_to_jagged/: dense_to_jagged.cpp
src/jagged_tensor_ops/jagged_to_padded_dense/: jagged_to_padded_dense.cpp
src/jagged_tensor_ops/jagged_to_padded_dense_v2/: jagged_to_padded_dense_impl.cpp  jagged_to_padded_dense_impl.h  jagged_to_padded_dense_v1.cpp  jagged_to_padded_dense_v2.cpp
src/jagged_tensor_ops/select_dim1_to_permute/: keyed_jagged_index_select_dim1.cpp
src/scripts/: op_builder_utils.sh
src/sparse_ops/offsets_range/: README.md  (+1 more)
src/tbe_training/split_embedding_codegen_forward_unweighted/: CMakeLists.txt  README.md  backward_codegen_adagrad_unweighted_exact.cpp  backward_codegen_adagrad_unweighted_exact_grad_aggregation.cpp  backward_codegen_adam_unweighted_exact.cpp  backward_codegen_adam_unweighted_exact_grad_aggregation.cpp  backward_codegen_rowwise_adagrad_unweighted_exact.cpp  backward_codegen_sgd_unweighted_exact.cpp  backward_codegen_sgd_unweighted_exact_grad_aggregation.cpp  backward_constant.h  split_embedding_codegen_common_utils.h  split_embedding_codegen_forward_unweighted.cpp  split_embedding_codegen_forward_unweighted.h
src/tbe_training/split_embedding_codegen_forward_unweighted/c310/: README.md  run.sh
src/tbe_training/split_embedding_codegen_forward_unweighted/c310/op_host/: split_embedding_codegen_forward_unweighted.cpp  split_embedding_codegen_forward_unweighted_tiling.h
src/tbe_training/split_embedding_codegen_forward_unweighted/c310/op_kernel/: common.h  split_embedding_codegen_forward_unweighted.cpp  split_embedding_kernel.h  split_embedding_kernel_pattern.h  split_embedding_kernel_simt.h
src/tbe_training/split_embedding_codegen_forward_unweighted/v220/: README.md  run.sh  split_embedding_codegen_forward_unweighted.json
src/tbe_training/split_embedding_codegen_forward_unweighted/v220/op_host/: split_embedding_codegen_forward_unweighted.cpp  split_embedding_codegen_forward_unweighted_tiling.h
src/tbe_training/split_embedding_codegen_forward_unweighted/v220/op_kernel/: split_embedding_codegen_forward_unweighted.cpp  split_embedding_codegen_forward_unweighted_kernel.h  split_embedding_nobag_kernel.h
test/jagged/: common.py  expand_into_jagged_permute_test.py  jagged_to_padded_dense_test.py  keyed_jagged_index_select_test.py
test/permute/: common.py
test/sparse/: block_bucketize_test.py  common.py  cumsum_test.py  misc_ops_test.py
test/split_embeddings_cache/: cache_test.py  test_lru_cache_populate_byte.py
test/tbe/: common.py  nbit_cache_test.py  split_embeddings_test.py
(+278 files in other folders)
